# libtdoa

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_all.sh  cmake_uninstall.cmake.in  tdoappConfig.cmake.in
.github/workflows/: cmake-ubuntu.yml  docker-multiplatform.yml
benchmarks/: BenchmarkMean.cc  CMakeLists.txt
include/: Algebra.h  Algebra.hh  Receiver.h  Receiver.hh  TdoaError.h  TdoaError.hh  TdoaLocator.h  TdoaLocator.hh
lib/: TdoaLocator.cc  TdoaLocator.cpp
scripts/: generate-benchmarks.py
src/: CMakeLists.txt  TdoaCLI.cc  TdoaRest.cc
templates/: gNB-template.json  receiver-template.json  server-template.json  toa-template.json
tests/: CMakeLists.txt  TestAlgebra.cc  TestAlgebra.cpp  TestLocalization.cc  TestLocalization.cpp  TestTdoaError.cc  TestTdoaError.cpp
